Fixed z-index on landing page.

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ div#blur {
 
 div#blur.closed {
 	opacity: 0;
+	z-index:-1;
 }
 
 div.block400 {
